# 2026-sysu-ai

./: .gitignore
lab4/code/: main.py
lab5/15_puzzle/: main.py
lab5/chess/: AGENTS.md
lab5/chess/src/: chess.py  main.py  minmax.py  state.py
lab5/chess/test/: chess_test.py  minmax_test.py  state_test.py
lab5/maze/: a_star.py  bfs.py  dfs.py  main.py  public.py
lab5/poker/: main.py
lab5/tsp/: AGENTS.md  pyproject.toml
lab5/tsp/src/: chromosome.py  ga.py  main.py  plotting.py  tee_logger.py  tsp_data.py
lab6/house_prices/: README.md  pyproject.toml
lab6/house_prices/house_prices/: __init__.py  __main__.py  cli.py  data.py  metrics.py  model.py  plot.py  preprocess.py
lab6/sms/: AGENT.md  README.md  pyproject.toml
lab6/sms/sms_spam/: cli.py  data.py  metrics.py  model.py  text.py
